# pyramid-googleauth

./: .cookiecutter.json  .coveragerc  .gitignore  .isort.cfg  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.cookiecutter/: cookiecutter.json
examples/: app.py
src/examples/: app.py
src/h_pyramid_google_oauth/: __init__.py  routes.py  security.py  views.py
src/h_pyramid_google_oauth/services/: __init__.py  google_auth.py  signature.py
src/pyramid_googleauth/: __init__.py  _routes.py  routes.py  security.py  views.py
src/pyramid_googleauth/services/: __init__.py  google_auth.py
tests/: conftest.py
tests/functional/: conftest.py  mock_services.py  services.py
tests/functional/h_pyramid_google_oauth/: views_test.py
tests/functional/pyramid_googleauth/: views_test.py
tests/pytest_plugins/: factory_boy.py
tests/unit/: conftest.py  security_test.py  services.py  views_test.py
tests/unit/pyramid_googleauth/: views_test.py
tests/unit/pyramid_googleauth/services/: google_auth_test.py
tests/unit/services/: google_auth_test.py  signature_test.py
