# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = pyramid_googleauth
version = 1.0
description =  "Sign in with Google" for Pyramid
long_description = file: README.md
long_description_content_type = text/markdown

author = Hypothesis Engineering Team
author_email = eng@list.hypothes.is
maintainer = Hypothesis Engineering Team
maintainer_email = eng@list.hypothes.is
url = https://web.hypothes.is/

# From: https://pypi.org/pypi?:action=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

project_urls=
    Source=https://github.com/hypothesis/pyramid-googleauth
license=License :: OSI Approved :: BSD License
platforms=Operating System :: OS Independent

[options]
install_requires =
    google-auth-oauthlib
    PyJWT
    pyramid
    pyramid-services
    
tests_require=
    pytest
    coverage
    h-matchers
    webtest
